# Chess

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
include/: Board.h  BoardSquare.h  ChessBoard.h  Game.h  Move.h  Position.h  Team.h
include/audio/: SoundPlayer.h  SoundType.h
include/parsers/: ArgsParser.h  FENParser.h
include/pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Piece.h  PieceFactory.h  Queen.h  Rook.h
include/players/: Player.h
include/utility/: ArgsUtility.h  ChessBoardUtility.h  PositionUtility.h  ResourcesFilepath.h  SoundPlayerUtility.h  TeamUtility.h
src/: Board.cpp  FENParser.cpp  Game.cpp  Main.cpp  Move.cpp  Position.cpp
src/audio/: SoundPlayer.cpp
src/parsers/: ArgsParser.cpp  FENParser.cpp
src/pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  PieceFactory.cpp  Queen.cpp  Rook.cpp
src/players/: Player.cpp
src/utility/: ArgsUtility.cpp  ChessBoardUtility.cpp  PositionUtility.cpp  SoundPlayerUtility.cpp  TeamUtility.cpp
